        Reviewed by Darin.

- fix http://bugs.webkit.org/show_bug.cgi?id=11756
          <rdar://problem/5286420>

        Fix a typo error to really compare the present domain to the domain of the parent of the targeted frame.

        * loader/FrameLoader.cpp: (WebCore::FrameLoader::canTarget):



Canonical link: https://commits.webkit.org/19228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24623 268f45cc-cd09-0410-ab3c-d52691b4dbfc